--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,5 +10,6 @@ jobs:
         run: echo "GoodBye"
   second-job:
     runs-on: ubuntu-latest
+    steps:
       -name: Print date
         run: date
